fix: add z-index for backround-gradient in contact

--- a/pages/index.css
+++ b/pages/index.css
@@ -84,6 +84,10 @@
                 radial-gradient(564px 494px at 94% 5%, rgba(58, 95, 86, 0.55) 0%, rgba(58, 95, 86, 0) 100%);
 }
 
+.background-gradient_place_contact {
+    background: radial-gradient(500px 500px at 25% 130%, rgba(184, 125, 88, 0.35) 0%, rgba(184, 125, 88, 0) 100%);
+}
+
 .promo {
     margin: auto;
     background-color: #F4F3F0;
@@ -121,7 +125,7 @@
 .contact {
     width: 100%;
     height: 460px;
-    background: radial-gradient(500px 500px at 25% 130%, rgba(184, 125, 88, 0.35) 0%, rgba(184, 125, 88, 0) 100%);
+    position: relative;
     display: flex;
 }
 
